# cmakeinit

./: CMakeLists.txt  README.md
Include/: main.h
src/: main.cpp
